datetime fun, but not working :(

--- a/templates/flights/base.html
+++ b/templates/flights/base.html
@@ -42,7 +42,7 @@
               <li {% block navigation_ranking %}{% endblock %}><a href="/ranking.html">Official Ranking</a></li>
               <li {% block navigation_chart %}{% endblock %}><a href="/chart.html">Ranking Evolution</a></li>
               <li class="divider-vertical"></li>
-              <li {% block navigation_log %}{% endblock %}><a href="/matchlog.html">Match Log</a></li>
+              <li {% block navigation_log %}{% endblock %}><a href="/flightList.html">Flight List</a></li>
               <li {% block navigation_whatif %}{% endblock %}><a href="/what_if.html">What-If Machine</a></li>
               <li class="divider-vertical"></li>
               <li><a href="/admin/">Admin</a></li>
