--- a/templates/flights/flightList.html
+++ b/templates/flights/flightList.html
@@ -16,6 +16,7 @@
                 <th>Aircraft</th>
                 <th>From</th>
                 <th>To</th>
+                <th>Flight Time</th>
                 <th>PIC</th>
                 <th>Landings</th>
                 <th>Remark</th>
@@ -28,8 +29,9 @@
                 <td>{{ flight.aircraft }}</td>
                 <td>{{ flight.fromAirport }}</td>
                 <td>{{ flight.toAirport }}</td>
-                <td>{{ flight.pic }}</td>
-                <td>{{ flight.landings }}</td>
+                <td>{{ flight.flightTime|time:"H:i"}}</td>
+                <td>{{ flight.departure_time|time:"H:i"}}</td>
+                <td>{{ flight.landings|stringformat:"03d" }}</td>
                 <td><a href="matchlog.html{{players_query_prefix}}{{ game.playerOne_id }}{{ranking_query}}">{{ game.playerOne.get_full_name }}</a> vs. <a href="matchlog.html{{players_query_prefix}}{{ game.playerTwo_id }}{{ranking_query}}">{{ game.playerTwo.c }}</a></td>
               </tr>
               {% endfor %}
